--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Planilha Web</title>
+    <title>Posição de Carteira</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <img src="logo.png" alt="Logo da Empresa" class="logo">
-        <h1>Dashboard - Planilha Web</h1>
+        <h1>Posição de carteira - Marcos</h1>
         <button id="modo-escuro">🌙</button>
     </header>
     <nav>
