--- a/index.html
+++ b/index.html
@@ -33,12 +33,8 @@
             color: white;
             z-index: 2;
         }
-        .btn-smaller {
-            font-size: 0.85rem;
-            padding: 5px 10px;
-        }
         .nav-link.active {
-            background-color: #0056b3 !important;
+            background-color: #ff9800 !important;
             color: white !important;
         }
         .dark-mode {
@@ -54,52 +50,26 @@
     </style>
 </head>
 <body class="container py-4">
-    <div id="login-container" class="text-center">
-        <h2>Login</h2>
-        <input type="text" id="username" class="form-control my-2" placeholder="Usuário">
-        <input type="password" id="password" class="form-control my-2" placeholder="Senha">
-        <button id="login-button" class="btn btn-primary">Entrar</button>
-        <p id="login-error" class="text-danger mt-2" style="display: none;">Usuário ou senha incorretos!</p>
-    </div>
-
-    <div id="dashboard" style="display: none;">
-        <header class="d-flex justify-content-between align-items-center bg-primary text-white p-2">
-            <img src="logo.png" alt="Logo da Empresa" class="logo">
-            <h1 class="fs-4">Relatório Gerencial</h1>
-            <button id="modo-escuro" class="btn btn-dark btn-smaller">🌙</button>
-        </header>
-        <nav class="my-2">
-            <ul id="menu" class="nav nav-pills"></ul>
-        </nav>
-        <main>
-            <div class="d-flex justify-content-between mb-2">
-                <input type="text" id="filtro" class="form-control w-50" placeholder="Buscar...">
-                <button id="exportar-excel" class="btn btn-success btn-smaller">📥 Exportar Excel</button>
-            </div>
-            <div id="tabela-container" class="table-responsive"></div>
-        </main>
-    </div>
+    <header class="d-flex justify-content-between align-items-center bg-primary text-white p-2 rounded">
+        <img src="logo.png" alt="Logo da Empresa" class="logo">
+        <h1 class="fs-4">Relatório Gerencial</h1>
+        <button id="modo-escuro" class="btn btn-outline-light">🌙 Modo Escuro</button>
+    </header>
+    <nav class="my-3">
+        <ul id="menu" class="nav nav-tabs"></ul>
+    </nav>
+    <main>
+        <div class="d-flex justify-content-between mb-3">
+            <input type="text" id="filtro" class="form-control w-50" placeholder="Buscar...">
+            <button id="exportar-excel" class="btn btn-outline-success">📥 Exportar Excel</button>
+        </div>
+        <div id="tabela-container" class="table-responsive"></div>
+    </main>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <script>
         document.getElementById("modo-escuro").addEventListener("click", () => {
             document.body.classList.toggle("dark-mode");
-        });
-        
-        document.getElementById("login-button").addEventListener("click", () => {
-            const user = document.getElementById("username").value;
-            const pass = document.getElementById("password").value;
-            const validUser = "admin";
-            const validPass = "1234";
-
-            if (user === validUser && pass === validPass) {
-                document.getElementById("login-container").style.display = "none";
-                document.getElementById("dashboard").style.display = "block";
-                carregarMenu();
-                carregarDados("BORDEROS OPERADOS");
-            } else {
-                document.getElementById("login-error").style.display = "block";
-            }
         });
 
         let guiaAtual = "BORDEROS OPERADOS";
