--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <img src="logo.png" alt="Logo" class="logo">
             <h1>Relatório Gerencial</h1>
-            <button id="modo-escuro" class="btn-primary-custom">🌙 Modo Escuro</button>
+            <button id="modo-escuro" class="btn-dark-mode">🌙 Modo Escuro</button>
         </header>
         
         <nav class="nav-container">
