--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
                 <img src="logo.png" alt="Logo" class="logo">
                 <h1>Relatório Gerencial</h1>
             </div>
-            <button id="modo-escuro" class="btn-dark-mode"><i class="fas fa-moon"></i> Modo Escuro</button>
+            <button id="modo-escuro" class="btn btn-primary"><i class="fas fa-moon"></i> Modo Escuro</button>
         </header>
         
         <nav class="nav-container">
             <ul id="menu" class="nav-buttons"></ul>
             <div class="input-group">
-                <input type="text" id="filtro" placeholder="🔍 Buscar...">
-                <button id="exportar-excel" class="btn-export"><i class="fas fa-file-excel"></i> Exportar Excel</button>
+                <input type="text" id="filtro" placeholder="🔍 Buscar..." class="input-field">
+                <button id="exportar-excel" class="btn btn-success"><i class="fas fa-file-excel"></i> Exportar Excel</button>
             </div>
         </nav>
 
