--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
         </header>
         
         <nav class="nav-container">
-            <ul id="menu" class="nav-buttons"></ul>
+            <ul id="menu" class="nav-buttons">
+                <li><a href="#" class="nav-link">📊 Borderôs Operados</a></li>
+                <li><a href="#" class="nav-link">💼 Carteiras em Aberto</a></li>
+                <li><a href="#" class="nav-link">✔ Títulos Quitados</a></li>
+                <li><a href="#" class="nav-link">⚠ Risco Cedente</a></li>
+                <li><a href="#" class="nav-link">⏳ Títulos Vencidos</a></li>
+            </ul>
             <div class="input-group">
                 <input type="text" id="filtro" placeholder="🔍 Buscar..." class="input-field">
                 <button id="exportar-excel" class="btn btn-success"><i class="fas fa-file-excel"></i> Exportar Excel</button>
