--- a/index.html
+++ b/index.html
@@ -1,120 +1,61 @@
-/* ==============================
-   ESTILOS GERAIS
-============================== */
-:root {
-    --cor-primaria: #007bff;
-    --cor-secundaria: #28a745;
-    --cor-fundo: #f4f4f4;
-    --cor-texto: #333;
-    --cor-borda: #ddd;
-    --cor-hover: #0056b3;
-    --cor-escuro: #121212;
-    --cor-texto-escuro: #ffffff;
-    --cor-borda-escura: #444;
-    --cor-hover-escuro: #333;
-    --cor-botao-escuro: #2a2a2a;
-}
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Relatório Gerencial</title>
+    
+    <!-- Estilos -->
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+    <div id="pagina-container" class="container">
+        
+        <!-- Cabeçalho -->
+        <header class="header">
+            <div class="logo-container">
+                <img src="logo.png" alt="Logo da empresa" class="logo">
+                <h1>Relatório Gerencial</h1>
+            </div>
+            <button id="modo-escuro" class="btn btn-primary" aria-label="Ativar modo escuro">
+                <i class="fas fa-moon"></i> Modo Escuro
+            </button>
+        </header>
 
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background: var(--cor-fundo);
-    color: var(--cor-texto);
-    transition: background 0.3s, color 0.3s;
-}
+        <!-- Navegação -->
+        <nav class="nav-container">
+            <ul id="menu" class="nav-buttons">
+                <li><a href="#" class="nav-link"><i class="fas fa-chart-line"></i> Borderôs Operados</a></li>
+                <li><a href="#" class="nav-link"><i class="fas fa-briefcase"></i> Carteiras em Aberto</a></li>
+                <li><a href="#" class="nav-link"><i class="fas fa-check-circle"></i> Títulos Quitados</a></li>
+                <li><a href="#" class="nav-link"><i class="fas fa-exclamation-triangle"></i> Risco Cedente</a></li>
+                <li><a href="#" class="nav-link"><i class="fas fa-hourglass-half"></i> Títulos Vencidos</a></li>
+            </ul>
 
-/* ==============================
-   MODO ESCURO
-============================== */
-body.dark-mode {
-    background: var(--cor-escuro);
-    color: var(--cor-texto-escuro);
-}
+            <div class="input-group">
+                <input type="text" id="filtro" placeholder="Buscar..." class="input-field" aria-label="Buscar relatório">
+                <button id="exportar-excel" class="btn btn-success" aria-label="Exportar para Excel">
+                    <i class="fas fa-file-excel"></i> Exportar Excel
+                </button>
+            </div>
+        </nav>
 
-body.dark-mode .table-container,
-body.dark-mode .nav-container,
-body.dark-mode .footer,
-body.dark-mode .header {
-    background: var(--cor-hover-escuro);
-    color: var(--cor-texto-escuro);
-    border-color: var(--cor-borda-escura);
-}
+        <!-- Conteúdo Principal -->
+        <main>
+            <section id="tabela-container" class="table-container">
+                <p>Carregando dados...</p>
+            </section>
+        </main>
 
-body.dark-mode .table th {
-    background-color: var(--cor-borda-escura);
-}
+        <!-- Rodapé -->
+        <footer class="footer">
+            <p>&copy; 2025 Relatório Gerencial - Todos os direitos reservados</p>
+        </footer>
 
-body.dark-mode .table td {
-    background-color: var(--cor-hover-escuro);
-    color: var(--cor-texto-escuro);
-}
+    </div>
 
-/* ==============================
-   ESTILO DOS BOTÕES
-============================== */
-.btn {
-    padding: 10px 15px;
-    border: none;
-    border-radius: 8px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.btn-primary {
-    background: var(--cor-secundaria);
-    color: white;
-}
-
-.btn-primary:hover {
-    background: #1e7e34;
-}
-
-/* Estilização dos botões de abas/tab */
-.tab-button {
-    background: var(--cor-primaria);
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    margin: 5px;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 14px;
-    transition: 0.3s;
-}
-
-.tab-button:hover {
-    background: var(--cor-hover);
-}
-
-body.dark-mode .tab-button {
-    background: var(--cor-botao-escuro);
-    color: var(--cor-texto-escuro);
-    border: 1px solid var(--cor-borda-escura);
-}
-
-body.dark-mode .tab-button:hover {
-    background: var(--cor-hover-escuro);
-}
-
-/* ==============================
-   QUEBRA DE PÁGINA NA IMPRESSÃO
-============================== */
-@media print {
-    .table-container {
-        page-break-before: always;
-    }
-}
-
-/* ==============================
-   RESPONSIVIDADE
-============================== */
-@media (max-width: 768px) {
-    .table-container {
-        overflow-x: auto;
-    }
-    .table th, .table td {
-        padding: 10px;
-    }
-}
+    <!-- Script -->
+    <script src="script.js"></script>
+</body>
+</html>
